--- a/Bookpouch/AboutBox.xaml
+++ b/Bookpouch/AboutBox.xaml
@@ -6,7 +6,7 @@
         <Image Source="Img/splashscreen.png" VerticalAlignment="Top" Height="170" Margin="-79,10,79,0"/>
         <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right" Width="152" Margin="0,10,0,0"  >
             <TextBlock Text="Bookpouch" FontWeight="Medium" FontSize="20"/>
-            <TextBlock Text="Version: 2.0"/>
+            <TextBlock Text="Version: ?" Name="Version"/>
             <TextBlock Text="Author: Mike"/>
             <TextBlock Text="Email: imike@centrum.cz"/>
         </StackPanel>       
