--- a/Bookpouch/Settings.xaml
+++ b/Bookpouch/Settings.xaml
@@ -32,6 +32,7 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="90" />
@@ -105,13 +106,16 @@
         <CheckBox Grid.Row="6" Grid.Column="1" Checked="AutoStart_OnChecked" Unchecked="AutoStart_OnChecked" Loaded="AutoStart_OnLoaded" Name="AutoStart" ToolTip="{local:Lng HintAutoStart}"/>
         
         <Label Grid.Row="7" Grid.Column="0" Content="{local:Lng SettingsOnlyOne}" Target="{Binding ElementName=OnlyOne}"/>
-        <CheckBox Grid.Row="7" Grid.Column="1" Checked="AutoStart_OnChecked" Unchecked="AutoStart_OnChecked" Loaded="AutoStart_OnLoaded" Name="OnlyOne" ToolTip="{local:Lng HintOnlyOne}"/>
+        <CheckBox Grid.Row="7" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="OnlyOne" ToolTip="{local:Lng HintOnlyOne}"/>
 
-        <Label Grid.Row="8" Grid.Column="0" Content="{local:Lng SettingsBooksDir}" Target="{Binding ElementName=BooksDir}" />
-        <Button Grid.Row="8" Grid.Column="1" Name="BooksDir"  HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="BooksDir_OnLoaded" Click="BooksDir_OnClick" ToolTip="{local:Lng HintSettingsBooksDir}"/>
+        <Label Grid.Row="8" Grid.Column="0" Content="{local:Lng SettingsOnlyManualCategories}" Target="{Binding ElementName=OnlyManualCategories}"/>
+        <CheckBox Grid.Row="8" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="OnlyManualCategories" ToolTip="{local:Lng HintOnlyManualCategories}"/>
+
+        <Label Grid.Row="9" Grid.Column="0" Content="{local:Lng SettingsBooksDir}" Target="{Binding ElementName=BooksDir}" />
+        <Button Grid.Row="9" Grid.Column="1" Name="BooksDir"  HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="BooksDir_OnLoaded" Click="BooksDir_OnClick" ToolTip="{local:Lng HintSettingsBooksDir}"/>
         
-        <Label Grid.Row="9" Grid.Column="0" Content="{local:Lng SettingsDebug}" Target="{Binding ElementName=Debug}" />
-        <Button Grid.Row="9" Grid.Column="1" Name="Debug" Content="{local:Lng SettingsConsole}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="{local:Lng HintSettingsDebug}"/>
+        <Label Grid.Row="10" Grid.Column="0" Content="{local:Lng SettingsDebug}" Target="{Binding ElementName=Debug}" />
+        <Button Grid.Row="10" Grid.Column="1" Name="Debug" Content="{local:Lng SettingsConsole}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="{local:Lng HintSettingsDebug}"/>
 
     </Grid>
 </Window>
