--- a/Bookpouch/Style/Global.xaml
+++ b/Bookpouch/Style/Global.xaml
@@ -3,10 +3,10 @@
 
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Controls.xaml" />
-        
+        <ResourceDictionary Source="Controls.xaml" />        
         <ResourceDictionary Source="ComboBox.xaml" />
         <ResourceDictionary Source="Info.xaml" />
+        <ResourceDictionary Source="DataGrid.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
