Blue categories in book edit can be now marked as user added by right clicking them with a mouse

--- a/Bookpouch/EditBook.xaml
+++ b/Bookpouch/EditBook.xaml
@@ -84,7 +84,7 @@
                 
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Button Content="{Binding Name}" BorderBrush="{Binding Color}" PreviewMouseLeftButtonUp="CategoryTag_OnPreviewMouseLeftButtonUp"/>
+                        <Button Content="{Binding Name}" BorderBrush="{Binding Color}" PreviewMouseLeftButtonUp="CategoryTag_OnPreviewMouseLeftButtonUp" PreviewMouseRightButtonUp="CategoryTag_OnPreviewMouseRightButtonUp"/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>                
