--- a/Bookpouch/MainWindow.xaml
+++ b/Bookpouch/MainWindow.xaml
@@ -2,11 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Bookpouch"
+        xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         Title="Bookpouch" Height="700" Width="1000" MinWidth="500" MinHeight="350" x:Name="Window"
         Background="#2d2d30" KeyUp="MainWindow_OnKeyUp"
         Closing="MainWindow_OnClosing">
     <Window.Resources>
-        <ResourceDictionary Source="Style/Global.xaml" />
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Style/Global.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Window.Resources>
 
     <Grid Margin="5">
@@ -73,18 +78,18 @@
 
         <DataGrid x:Name="BookGrid" Grid.Row="2" IsReadOnly="True" AutoGenerateColumns="False"
                   Loaded="BookGrid_OnLoaded" VerticalAlignment="Top" CanUserResizeRows="False" RowHeaderWidth="1" KeyUp="BookGrid_OnKeyUp" PreviewMouseRightButtonUp="BookGrid_PreviewMouseRightButtonUp" PreviewMouseLeftButtonUp="BookGrid_PreviewMouseRightButtonUp"
-                  GridLinesVisibility="None"  RowBackground="#5d5d5d" AlternatingRowBackground="#454545"   Background="#569cd6"
+                  GridLinesVisibility="None"  RowBackground="#5d5d5d" AlternatingRowBackground="#454545"   Background="#569cd6" CanUserSortColumns="True"
                   Template="{StaticResource DataGrid}">                      
             <DataGrid.Resources>
                 <Style x:Key="{ComponentResourceKey ResourceId=DataGridSelectAllButtonStyle, TypeInTargetAssembly={x:Type DataGrid}}" TargetType="{x:Type Button}">
                     <Setter Property="Opacity" Value="0" />
-                </Style>
+                </Style>                
             </DataGrid.Resources>
-            <DataGrid.ColumnHeaderStyle>
+            <DataGrid.ColumnHeaderStyle>                
                 <Style TargetType="{x:Type DataGridColumnHeader}">
                     <Setter Property="Background" Value="#569cd6" />
                     <Setter Property="Padding" Value="5 2 5 2" />
-                    <Setter Property="FontWeight" Value="Heavy" />
+                    <Setter Property="FontWeight" Value="Heavy" />                    
                 </Style>
             </DataGrid.ColumnHeaderStyle>
             <DataGrid.RowHeaderStyle>
@@ -106,7 +111,7 @@
             </DataGrid.CellStyle>
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="{local:Lng BookGridHeaderTitle}" Binding="{Binding Title}" Width="*">
+                <DataGridTextColumn Header="{local:Lng BookGridHeaderTitle}" Binding="{Binding Title}" Width="*" SortDirection="Ascending">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="Padding" Value="5" />
@@ -143,13 +148,13 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <DataGridTextColumn Header="{local:Lng BookGridHeaderCategory}" Binding="{Binding Category}">
+             <!--   <DataGridTextColumn Header="{local:Lng BookGridHeaderCategory}" Binding="{Binding Category}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="Padding" Value="5" />
                         </Style>
                     </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
+                </DataGridTextColumn>-->
             </DataGrid.Columns>
 
             <DataGrid.RowDetailsTemplate>
